[tool.poetry]
name = "tetris-challenge"
version = "0.1.0"
description = ""
authors = ["Markonick <nicolas.markos@gmail.com>"]
readme = "README.md"
# packages = [{include = "tetris_challenge"}]

[tool.poetry.dependencies]
python = "^3.10"
# numpy = "^1.24.3"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88